<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dimension_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ayushvora.potholereporter.DimensionQuestionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="13dip"
            android:text="@string/Question1"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <LinearLayout
                android:visibility="visible"
                android:id="@+id/numberPickerInnerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <NumberPicker
                    android:id="@+id/lengthPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginBottom="5pt"
                    android:layout_marginTop="2pt"></NumberPicker>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="X"
                    android:textSize="20pt"/>
                <NumberPicker
                    android:id="@+id/widthPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginBottom="5pt"
                    android:layout_marginTop="2pt"></NumberPicker>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/DimensionalUnitMSq"></TextView>
            </LinearLayout>


        <TextView
            android:id="@+id/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="13dip"
            android:text="@string/Question2"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <LinearLayout
            android:visibility="visible"
            android:id="@+id/numberPickerLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/depthPicker"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:background="@drawable/rounded_corner"
                android:layout_gravity="center"
                android:layout_marginBottom="2pt"
                android:layout_marginTop="2pt"
                ></NumberPicker>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/DimensionalUnitCM"></TextView>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/buttonBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="1">
            <Button
                android:id="@+id/PrevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Previous"
                android:layout_marginLeft="15pt"
                android:onClick="onPrevClick">
            </Button>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/NextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="15pt"
                android:onClick="onNextClick"
                android:text="@string/Next">
            </Button>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
