<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pothole_picture_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ayushvora.potholereporter.PotholePictureLocationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBarRelLayout"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/buttonBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="1">
            <Button
                android:id="@+id/PrevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Previous"
                android:layout_marginLeft="15pt"
                android:onClick="onPrevClick">
            </Button>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/NextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="15pt"
                android:onClick="onNextClick"
                android:text="@string/Next">
            </Button>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonBarRelLayout"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/potholeImage"
            android:layout_width="300dp"
            android:layout_height="320dp" />
        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/CaptureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CapGeoTagPot"
            android:onClick="onCaptureAndGeoTagPothole"/>
    </LinearLayout>
</RelativeLayout>
